# OccamNet_SocialSci

./: README.md  ensemble_demo.py  lotka_volterra_H_demo.py  pyproject.toml
occamnet/: Bases.py  Complexity.py  Losses.py  Network.py  SparseSetters.py
src/: ensemble_demo.py  lotka_volterra_demo.py  sir_demo.py  solow_demo.py
src/results/: EnsembleDemo_2024-08-21.csv
