[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["MIT"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "4.2.4"
matplotlib = "3.9.2"
numpy = "1.26.4"
pandas = "2.2.2"
scipy = "1.14.1"
sympy = "1.13.2"
toml = "0.10.2"
torch = "2.4.0"


[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
